# json-database-st

./: .gitignore  BENCHMARKS.md  Cargo.toml  DEPRECATED.md  GEMINI.md  JSONDatabase.d.ts  JSONDatabase.js  JSONDatabase.legacy.js  JSONDatabase.ts  LICENSE  README.md  bench_test.wal  benchmark.js  bun_test_db.wal  command.js  gemini.md  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  CI.yml.disabled
__tests__/: JSONDatabase.test.js
__tests__/perf-test-data/sharded/shards/: shard_0.json  shard_1.json  shard_10.json  shard_11.json  shard_12.json  shard_13.json  shard_14.json  shard_15.json  shard_2.json  shard_3.json  shard_4.json  shard_5.json  shard_6.json  shard_7.json  shard_8.json  shard_9.json
conductor/: product.md  setup_state.json
docs/: benchmarks.html  code (1).html  docs.html  index.html
src/: lib.rs
