[package]
name = "json-database-st-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.0", features = ["napi4", "serde-json"] }
napi-derive = "2.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
thiserror = "1.0"
dashmap = "5.5" # Concurrent Map for in-memory indexing
crossbeam = "0.8"
rayon = "1.8" # For parallel query processing

[build-dependencies]
napi-build = "2.0.1"
